WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
132831
REGRESSION(168625): [GTK] Build broken.
https://bugs.webkit.org/show_bug.cgi?id=132831
Summary
REGRESSION(168625): [GTK] Build broken.
Carlos Alberto Lopez Perez
Reported
2014-05-12 11:58:48 PDT
Revision
r168625
<
http://trac.webkit.org/168625
> broke the GTK build: ../../Source/WebKit2/UIProcess/gtk/WebContextGtk.cpp:127:59: error: static member function ‘static WTF::String WebKit::WebContext::platformDefaultLocalStorageDirectory()’ declared with type qualifiers String WebContext::platformDefaultLocalStorageDirectory() const ^
Attachments
Patch
(1.53 KB, patch)
2014-05-12 12:15 PDT
,
Carlos Alberto Lopez Perez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Carlos Alberto Lopez Perez
Comment 1
2014-05-12 11:59:26 PDT
(In reply to
comment #0
)
> Revision
r168625
<
http://trac.webkit.org/168625
> broke the GTK build: >
^
http://trac.webkit.org/r168625
Carlos Alberto Lopez Perez
Comment 2
2014-05-12 12:15:47 PDT
Created
attachment 231314
[details]
Patch
WebKit Commit Bot
Comment 3
2014-05-12 12:55:07 PDT
Comment on
attachment 231314
[details]
Patch Clearing flags on attachment: 231314 Committed
r168638
: <
http://trac.webkit.org/changeset/168638
>
WebKit Commit Bot
Comment 4
2014-05-12 12:55:11 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug