REGRESSION(168625): [GTK] build broken due to WKContextSetLocalStorageDirectory https://bugs.webkit.org/show_bug.cgi?id=132831

Unreviewed GTK build fix.

Patch by Carlos Alberto Lopez Perez <clopez@igalia.com> on 2014-05-12

* UIProcess/gtk/WebContextGtk.cpp:
(WebKit::WebContext::platformDefaultLocalStorageDirectory):
This is now a static member function.

Canonical link: https://commits.webkit.org/150875@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@168638 268f45cc-cd09-0410-ab3c-d52691b4dbfc